# verifiable_ai_agent_server

./: .env.example  .gitignore  LANGFUSE_SETUP_GUIDE.md  OLLAMA_SETUP_GUIDE.txt  PRD.md  PROJECT_SUMMARY.md  PROPOSAL.md  PROPOSAL.txt  README.md  VERIFY_CLI_GUIDE.md  debug_session_root.py  demo_all_work.py  demo_output.txt  docker-compose.yml  e2e_demo.py  pyproject.toml  real_agent_demo.py  real_prompt_demo.py  run_all_tests.py  setup.ps1  show_progress.py  test_langfuse_integration.py  test_langfuse_simple.py
.github/workflows/: dependency-security.yml
backend/: agent_backend.py  conversation_manager.py  database.py  generate_certs.py  http_security.py  server.py
examples/: agent_multi_tool_demo.py  agent_remote_demo.py  basic_run.py  demo_hierarchical_spans.py  llm_demo.py  ollama_diagnostics.py  remote_tool.py  secure_mcp_lib.py  validate_phase2.py
frontend/: index.html  script.js  style.css
src/: __init__.py  config.py
src/agent/: __init__.py
src/crypto/: __init__.py  encoding.py  kex.py  signatures.py  verkle.py
src/integrity/: __init__.py  database_counter.py  hierarchical_integrity.py
src/llm/: __init__.py
src/observability/: __init__.py  langfuse_client.py  trace_context.py
src/security/: __init__.py  key_management.py  llm_rate_limiter.py
src/storage/: __init__.py
src/tools/: __init__.py  key_rotation_cli.py  verify_cli.py
src/transport/: jsonrpc_errors.py  jsonrpc_protocol.py  mcp_protocol_adapter.py  secure_mcp.py
tests/: MCPSecBench_TEST_RESULTS.md  conftest.py  test_config_validation.py  test_counter_persistence.py  test_crypto.py  test_database_security_migrations.py  test_integrity.py  test_integrity_signatures.py  test_jsonrpc_protocol.py  test_key_rotation.py  test_kzg.py  test_langfuse.py  test_latency_benchmarks.py  test_llm_integration.py  test_llm_rate_limiter.py  test_mcp_server.py  test_mcpsecbench.py  test_otel_spans.py  test_safe_math_parser_security.py  test_security_attack_scenarios.py  test_supply_chain_validation.py  test_verify_cli.py  test_web_api_hardening.py
